[package]
name = "geozero-bug"
version = "0.1.0"
authors = ["Audun Skaugen <audun.skaugen@cognite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geozero = { version = "0.7", features = ["with-wkb", "geo-types"] }
geo-types = "0.7.2"
